--- a/src/components/module/hero/styles/hero.css
+++ b/src/components/module/hero/styles/hero.css
@@ -6,11 +6,13 @@
     background-position: 50% 50%;
     background-size: contain;
     background-repeat: no-repeat;
+    visibility: hidden;
+    overflow: hidden;
   }
 
   @media only screen and (min-width: 768px) {
     .hero {
-      background-image: linear-gradient(theme('colors.primary'), theme('colors.primary'))
+      background-image: linear-gradient(theme('colors.primary'), theme('colors.primary'));
     }
   }
 } 
